--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "captchapng": "^0.0.1",
     "egg": "^2.15.1",
     "egg-scripts": "^2.11.0",
+    "passport-local": "^1.0.0",
     "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
